# langnet-web

./: .gitmodules  AGENTS.md  DEV.md  README.md  REVIEW.md  TODO.md  devenv.nix  justfile  package.json  pyproject.toml
backend/: README.md  build.zig  build.zig.zon  justfile  pyproject.toml  zzzdemo.zig
backend/boilerplate_app/: asgi.py  cli.py
backend/boilerplate_app/web/: __init__.py  routes.py
backend/boilerplate_app/web/templates/: hello_htmx.html
backend/old/: justfile  pyproject.toml
backend/old/boilerplate_app/: asgi.py
backend/src/: config.zig  main.zig  routes.zig  template.zig
backend/templates/: hello_htmx.html  main_content.html
docs/: DAISYUI_TAILWIND.md  HTMX_ALPINE.md  INDEX.md  VITE.md  ZIG_0.15_NOTES.md  ZIG_BACKEND.md
frontend/: README.md  index.html  justfile  package.json  vite.config.ts
frontend/src/: main.ts  tailwind.css
