[project]
name = "langnet-web"
version = "0.1.0"
description = "A boilerplate web application demonstrating modern Python tooling with Nix/devenv - Starlette backend"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "sh>=1.14.3",
    "rich>=13.0.0",
    "duckdb>=0.9.0",
    "polars>=0.20.0",
    "cattrs>=23.0.0",
    "starlette>=0.36.0",
    "jinja2>=3.1.0",
    "granian>=1.5.0",
    "filelock>=3.15.0",

    "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["boilerplate_app"]

[project.scripts]
boilerplate-cli = "boilerplate_app.cli:app"
